# crm_nemnovo

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
app/: main.py
app/admin/: __init__.py  auth.py  setup.py  views.py
app/api/v1/: router.py
app/core/: audit.py  config.py  exceptions.py  logging.py  middleware.py  permissions.py  security.py
app/db/: base.py  redis.py  session.py  types.py
app/modules/assets/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/auth/: dependencies.py  router.py  schemas.py  service.py
app/modules/bookings/: models.py  repository.py  schemas.py  service.py
app/modules/calendar/: repository.py  router.py  schemas.py
app/modules/clients/: models.py  repository.py  router.py  schemas.py  service.py
app/shared/: base_repository.py  base_schema.py  enums.py  utils.py
app/workers/: celery_app.py
docs/: ARCHITECTURE.md  BACKLOG.md  RELEASE_CHECKLIST.md  RUN.md  TZ_TO_ARCHITECTURE_MAP.md  ИНСТРУКЦИЯ_ПО_РАБОТЕ_В_CRM.md  Инструкция_CRM_Nemnovo.docx  Инструкция_CRM_Nemnovo_Администратор.docx  Инструкция_CRM_Nemnovo_Сотрудник.docx
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: backup_db.sh  clear_calendar_data.py  create_user.py  ensure_admin_once.py  run_seed.sh  seed.py  seed_demo.py  seed_demo_data.py  setup_db.sh
tests/: conftest.py
tests/integration/: test_auth.py  test_calendar_multi_event.py  test_stock_sales_report.py
tests/unit/: test_payment_service.py  test_utils.py
(+140 files in other folders)
